Update padding style in `InvestorProfileDetails.module.scss`: add `!important` to ensure correct application on tablet landscape. (#1701)

--- a/components/page/member-details/InvestorProfileDetails/InvestorProfileDetails.module.scss
+++ b/components/page/member-details/InvestorProfileDetails/InvestorProfileDetails.module.scss
@@ -22,8 +22,7 @@
     z-index: 10;
 
     @include media.tablet-landscape {
-      padding: 16px;
-
+      padding: 16px !important;
       position: relative;
       inset: unset;
       z-index: unset;
